Suppress JLine native access warning via manifest entry